# rp2040-playground

./: .gitmodules  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json  postCreate.sh
projects/adafruit_qtpy_rp2040/hello_world/: CMakeLists.txt  README.md  main.c
projects/adafruit_qtpy_rp2040/internal_temp/: CMakeLists.txt  README.md  main.c
projects/adafruit_qtpy_rp2040/neopixel_pio/: CMakeLists.txt  neopixel_pio.c
projects/cytron_maker_pi_rp2040/hello_neopixel/: CMakeLists.txt  README.md  hello_neopixel.c  main.c
projects/hello_world/: CMakeLists.txt  README.md  hello_world.c
projects/internal_temp/: CMakeLists.txt  README.md  internal_temp.c
projects/neopixel_pio/: CMakeLists.txt  README.md  neopixel_pio.c
projects/pico/sigrok_pico/: CMakeLists.txt  README.md  main.c  sr_device.h
projects/pico/usb_hid_bridge/: CMakeLists.txt  README.md  main.c  tusb_config.h  usb_descriptors.c
projects/sigrok_pico/: CMakeLists.txt  README.md  sigrok_pico.c  sr_device.h
scripts/: flash.sh  setup.sh
